--- a/reports/biblio.bib
+++ b/reports/biblio.bib
@@ -48,6 +48,28 @@ pages = {484--489}
   school={the University of Liverpool}
 }
 
+@article{Wang:2015wz,
+author = {Wang, Ziyu and Schaul, Tom and Hessel, Matteo and van Hasselt, Hado and Lanctot, Marc and de Freitas, Nando},
+title = {{Dueling Network Architectures for Deep Reinforcement Learning}},
+journal = {arXiv.org},
+year = {2015},
+eprint = {1511.06581v3},
+eprinttype = {arxiv},
+eprintclass = {cs.LG},
+month = nov
+}
+
+@article{Hessel:2017tw,
+author = {Hessel, Matteo and Modayil, Joseph and van Hasselt, Hado and Schaul, Tom and Ostrovski, Georg and Dabney, Will and Horgan, Dan and Piot, Bilal and Azar, Mohammad and Silver, David},
+title = {{Rainbow: Combining Improvements in Deep Reinforcement Learning}},
+journal = {arXiv.org},
+year = {2017},
+eprint = {1710.02298v1},
+eprinttype = {arxiv},
+eprintclass = {cs.AI},
+month = oct
+}
+
 @article{mnih2015humanlevel,
   added-at = {2015-08-26T14:46:40.000+0200},
   author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A. and Veness, Joel and Bellemare, Marc G. and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K. and Ostrovski, Georg and Petersen, Stig and Beattie, Charles and Sadik, Amir and Antonoglou, Ioannis and King, Helen and Kumaran, Dharshan and Wierstra, Daan and Legg, Shane and Hassabis, Demis},
